--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="one-half column" style="margin-top: 25%">
         <h4>Concepts of Data Visualization in Tableau</h4>
         <p>Hello! It's Kathryn and Luca, the teachers of the Data Visualization in Tableau course. We're happy to see you! We'll be adding more details here soon, but in the meantime check out our course website.</p>
-        <a class="button" href="#https://lucaalessidesign.wixsite.com/tableau-course">Course Website</a>
+        <a class="button" href="https://lucaalessidesign.wixsite.com/tableau-course">Course Website</a>
       </div>
     </div>
   </div>
