--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         <p>Hello! It's Kathryn and Luca, the teachers of the Data Visualization in Tableau course. We're happy to see you! We'll be adding more details here soon, but in the meantime check out our course website.</p>
         <a class="button" href="https://lucaalessidesign.wixsite.com/tableau-course">Course Website</a>
       </div>
+      <div class="one-half column" style="margin-top: 25%">
+        <script
+                    src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script><lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_uqaysbud.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop controls autoplay></lottie-player>
+    </div>"
     </div>
   </div>
 
