--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         <a class="button" href="https://lucaalessidesign.wixsite.com/tableau-course">Course Website</a>
       </div>
       <div class="one-half column" style="margin-top: 25%">
-        <script
-                    src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script><lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_uqaysbud.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop controls autoplay></lottie-player>
+        <lottie-player src="https://assets8.lottiefiles.com/private_files/lf30_uqaysbud.json" mode="bounce" background="transparent" speed="1" style="width: 900px; height: auto; overflow:hidden;" hover="" loop="" autoplay=""></lottie-player><lottie-player src="https://assets8.lottiefiles.com/private_files/lf30_uqaysbud.json" mode="bounce" background="transparent" speed="1" style="width: 900px; height: auto; overflow:hidden;" hover="" loop="" autoplay=""></lottie-player>
     </div>"
     </div>
   </div>
