--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <a class="button" href="https://lucaalessidesign.wixsite.com/tableau-course">Course Website</a>
       </div>
       <div class="one-half column" style="margin-top: 25%">
-        <lottie-player src="https://assets8.lottiefiles.com/private_files/lf30_uqaysbud.json" mode="bounce" background="transparent" speed="1" style="width: 900px; height: auto; overflow:hidden;" hover="" loop="" autoplay=""></lottie-player><lottie-player src="https://assets8.lottiefiles.com/private_files/lf30_uqaysbud.json" mode="bounce" background="transparent" speed="1" style="width: 900px; height: auto; overflow:hidden;" hover="" loop="" autoplay=""></lottie-player>
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_uqaysbud.json"  background="transparent"  speed="1"  style="width: 500px; height: 500px;" hover   autoplay></lottie-player>
     </div>"
     </div>
   </div>
