--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="one-half column" style="margin-top: 25%">
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_uqaysbud.json"  background="transparent"  speed="1"  style="width: 500px; height: 500px;" hover   autoplay></lottie-player>
+        <lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_uqaysbud.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
     </div>"
     </div>
   </div>
